# raytracer

./: CMakeLists.txt  dependencies.sh
include/: camera.h  gl.h  math_utils.h  model.h  renderer.h  tracer_objects.h
shaders/: frag_tex.glsl  frag_trace.glsl  fragment.glsl  vert_pass.glsl  vertex.glsl  wasm_shaders.h  wasm_shaders.h.in
src/: camera.cpp  gl.cpp  main.cpp  math_utils.cpp  model.cpp  renderer.cpp  tracer_objects.cpp
